--- a/style.css
+++ b/style.css
@@ -1,17 +1,78 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 * {
-	/* Universal Selector. Applies this code to everything. */
 
-	box-sizing: border-box; /* If we apply any padding or border to an element, it doesn't effect the width */
+	box-sizing: border-box; 
 }
 body {
+	background-color: #ecf0f1;
 	font-family: "Roboto", sans-serif;
-	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
 	overflow: hidden;
 	display: flex;
 	margin: 0;
+}
+
+img {
+	max-width: 100%; /* 100% of it's container */ 
+}
+
+.card {
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+	overflow: hidden;
+	width: 350px;
+}
+
+.card-header {
+
+	height: 200px;
+}
+
+.card-header img {
+	object-fit: cover;
+	height: 100%;
+	width: 100%;
+}
+
+.card-content {
+	background-color: #fff;
+	padding: 30px;
+}
+
+.card-title {
+	height: 20px;
+	margin: 0;
+}
+
+.card-excerpt {
+	color: #777;
+	margin: 10px 0 20px;
+}
+
+.author {
+	display: flex;
+}
+
+.profile-img {
+
+	border-radius: 50%;
+	overflow: hidden;
+	height: 40px;
+	width: 40px;
+}
+
+.author-info {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	margin-left: 10px;
+	width: 100px;
+}
+
+.author-info small {
+	color: #aaa;		
+	margin-top: 5px;
 }
